@@ -86,6 +86,7 @@ int net_clone(FAR struct socket *psock1, FAR struct socket *psock2)
   /* Increment the reference count on the connection */
 
   DEBUGASSERT(psock2->s_conn);
+  psock2->s_crefs    = 1;                   /* One reference on the new socket itself */
 
 #ifdef CONFIG_NET_TCP
   if (psock2->s_type == SOCK_STREAM)
