@@ -167,6 +167,8 @@ void uip_tcpinput(struct uip_driver_s *dev)
                */
 
               conn->tcpstateflags = UIP_ESTABLISHED;
+              conn->crefs         = 1;
+
               if (uip_accept(dev, conn, tmp16) != OK)
                 {
                   /* No, then we have to give the connection back */
